--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -61,6 +63,11 @@ dependencies {
 
     //navigation
     implementation("androidx.navigation:navigation-compose:2.5.3")
+
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:32.8.1')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation("com.google.firebase:firebase-crashlytics")
 
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
