--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,10 +54,10 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material3:material3-android:1.2.1'
 
     //navigation
-    implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation("androidx.navigation:navigation-compose:2.7.7")
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:32.8.1')
@@ -77,7 +77,12 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.2.2")
 
     //Koin
-    implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
+    def koin_version = "3.1.6"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
+    implementation "io.insert-koin:koin-test:$koin_version"
+    implementation "io.insert-koin:koin-core:$koin_version"
+    implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
 
     //DataStore
     implementation "androidx.datastore:datastore-preferences:1.1.0-alpha01"
