--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     kapt("androidx.room:room-compiler:2.5.0")
     implementation("androidx.room:room-ktx:2.5.0")
 
+    //gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
     //Coil
     implementation("io.coil-kt:coil-compose:2.2.2")
 
