Fixed room issues

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,9 +69,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 
     //roomDB
-    implementation("androidx.room:room-runtime:2.5.0")
-    kapt("androidx.room:room-compiler:2.5.0")
-    implementation("androidx.room:room-ktx:2.5.0")
+    def room_version = "2.6.1"
+    implementation("androidx.room:room-runtime:$room_version")
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     //gson
     implementation 'com.google.code.gson:gson:2.10.1'
