--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2")
 
     //Coil
     implementation("io.coil-kt:coil-compose:2.2.2")
