--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,14 @@ dependencies {
     //Coil
     implementation("io.coil-kt:coil-compose:2.2.2")
 
+    //Emojis
+    def emoji2_version = "1.4.0"
+
+    implementation("androidx.emoji2:emoji2:$emoji2_version")
+    implementation("androidx.emoji2:emoji2-views:$emoji2_version")
+    implementation("androidx.emoji2:emoji2-views-helper:$emoji2_version")
+    implementation "androidx.emoji2:emoji2-emojipicker:$emoji2_version"
+
     //Koin
     def koin_version = "3.1.6"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
