--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation("androidx.emoji2:emoji2-views:$emoji2_version")
     implementation("androidx.emoji2:emoji2-views-helper:$emoji2_version")
     implementation "androidx.emoji2:emoji2-emojipicker:$emoji2_version"
+    implementation "com.github.Abhimanyu14:compose-emoji-picker:1.0.0-alpha16"
 
     //Koin
     def koin_version = "3.1.6"
