--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.compose.ui:ui-text-google-fonts:1.6.8'
 
     //roomDB
     def room_version = "2.6.1"
